{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 10,
  "lineage": "7109740e-57de-abee-af41-3b9fca40845c",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054a2c5b06cb85f2f",
            "arn": "arn:aws:ec2:us-east-1:905418440925:elastic-ip/eipalloc-054a2c5b06cb85f2f",
            "association_id": "eipassoc-00d27f45c3a25c51d",
            "domain": "vpc",
            "id": "eipalloc-054a2c5b06cb85f2f",
            "instance": "i-08cd43ec8d937da51",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0577c370a8180ceb8",
            "private_dns": "ip-172-16-1-53.ec2.internal",
            "private_ip": "172.16.1.53",
            "public_dns": "ec2-100-50-124-78.compute-1.amazonaws.com",
            "public_ip": "100.50.124.78",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-prod-eip"
            },
            "tags_all": {
              "Name": "dermatech-prod-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:905418440925:instance/i-0f122b19059ead51c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f122b19059ead51c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08b549db149983f37"
              }
            ],
            "primary_network_interface_id": "eni-08b549db149983f37",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-218-207-127.compute-1.amazonaws.com",
            "public_ip": "3.218.207.127",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-032e845db14e2cd7c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0276ec2520d0993ef",
            "tags": {
              "Name": "dermatech-prod-gateway"
            },
            "tags_all": {
              "Name": "dermatech-prod-gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033fef644059a3441"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418440925",
            "id": "i-0f122b19059ead51c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway.aws_security_group.gateway_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418440925:security-group/sg-033fef644059a3441",
            "description": "Security group for API Gateway Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033fef644059a3441",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dermatech-prod-gateway-sg",
            "name_prefix": "",
            "owner_id": "905418440925",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0d82d9457a47abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418440925",
            "id": "sg-033fef644059a3441",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418440925:internet-gateway/igw-075a7a947661482c5",
            "id": "igw-075a7a947661482c5",
            "owner_id": "905418440925",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-prod-igw"
            },
            "tags_all": {
              "Name": "dermatech-prod-igw"
            },
            "vpc_id": "vpc-0c0d82d9457a47abb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418440925:route-table/rtb-0c2eb92145cbf8410",
            "id": "rtb-0c2eb92145cbf8410",
            "owner_id": "905418440925",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075a7a947661482c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dermatech-prod-public-rt"
            },
            "tags_all": {
              "Name": "dermatech-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0d82d9457a47abb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418440925",
            "id": "rtb-0c2eb92145cbf8410",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcfe143f4ed03e28",
            "region": "us-east-1",
            "route_table_id": "rtb-0c2eb92145cbf8410",
            "subnet_id": "subnet-0276ec2520d0993ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418440925:subnet/subnet-0276ec2520d0993ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0276ec2520d0993ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418440925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-prod-public-subnet"
            },
            "tags_all": {
              "Name": "dermatech-prod-public-subnet"
            },
            "vpc_id": "vpc-0c0d82d9457a47abb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418440925",
            "id": "subnet-0276ec2520d0993ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418440925:vpc/vpc-0c0d82d9457a47abb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b14c636c98b77e8",
            "default_route_table_id": "rtb-03afaafa61ddf24c6",
            "default_security_group_id": "sg-0a46b8da778da1b35",
            "dhcp_options_id": "dopt-0b55ee4ceeee2d384",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0d82d9457a47abb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03afaafa61ddf24c6",
            "owner_id": "905418440925",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "dermatech-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "dermatech-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418440925",
            "id": "vpc-0c0d82d9457a47abb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}